# json-formula-rs

./: .gitignore  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md
docs/superpowers/plans/: 2026-03-31-tauri-testbed.md  2026-03-31-testbed-improvements.md
docs/superpowers/specs/: 2026-03-31-tauri-testbed-design.md  2026-03-31-testbed-improvements-design.md
src/: ast.rs  errors.rs  functions.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  runtime.rs  types.rs  utils.rs
testbed/: Cargo.toml  tauri.conf.json
testbed/src/: main.rs
testbed/ui/: index.html  main.js  style.css
tests/: official_suite.rs
