[package]
name = "json-formula-testbed"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = { version = "1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json-formula-rs = { path = ".." }

[build-dependencies]
tauri-build = { version = "1", features = [] }
